[project]
name = "imgram_Doozy"
version = "1.0.0"
authors = [
    { name="Doozy" }
]
description = "Instagram media downloader CLI (doesn't work for stories)"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "click>=8.1",
    "instagrapi",
    "pwinput",
]

[project.scripts]
imgram = "imgram_Doozy.imgram:imgram"

[build-system]
requires = ["flit_core >= 3.12.0, <4"]
build-backend = "flit_core.buildapi"